# fragscrape

./: .gitignore  Fragrantica_Import.ipynb  README.md  TODO.ipynb  awards.ipynb  best_marine_2023.csv  combine_awards.py  compare.ipynb  config.yaml  delete_from_db.py  fragrantica_awards_ranking.py  fragrantica_config.yaml  fragscrape.db  graph.json  graph_with_selected_attributes.py  graph_with_target_node.py  hot_days_2017.csv  import_awards.py  import_tracker.py  index.html  mens_all_time_2017.csv  mens_all_time_2018.csv  mens_all_time_2019.csv  mens_all_time_2020.csv  mens_all_time_2021.csv  mens_all_time_2022.csv  mens_all_time_2023.csv  mens_all_time_combined.csv  mens_yearly_2023.csv  parfumo_collection_config.yaml  parfumo_jcopeland.yaml  parfumo_scatter.py  parfumo_tops_config.yaml  pyproject.toml  recommendation.ipynb  requirements.in  requirements.txt  test_parfumo_collection_config.yaml  testing.ipynb  unit_test_db.py  (+2 more)
code/: combine_awards.py  config.py  driver.py  enrich_collection.py  import_awards.py  import_collection.py  process_awards.py  visualize_awards.py
configs/: fragrantica_config.yaml  parfumo_collection_config.yaml  parfumo_jcopeland.yaml
data/: best_marine_2023.csv  mens_all_time_2018.csv  mens_all_time_2021.csv  mens_all_time_2023.csv  mens_all_time_combined.csv  mens_yearly_2022.csv  mens_yearly_2023.csv  vanilla_2021.csv
notebooks/: Fragrantica_Analysis.ipynb  TODO.ipynb  collection_enriched.json  decants.json  decants_enriched.json  jcopeland_tested.json  jcopeland_tested_enriched.json  mens_all_time.ipynb  parfumo.ipynb  (+1 more)
(+98 files in other folders)
