[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "fragscrape"
version = "0.0.1"
requires-python = ">= 3.10"
authors = [
    {name = "Will Baker", email = "bakerwill764@gmail.com"},
]
description = 'A package for scraping and analyzing data from the fragrance databases Fragrantica and Parfumo.'
dynamic = ["dependencies"]

[project.scripts]
fragscrape = "fragscrape:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-function-docstring", "unspecified-encoding", "line-too-long"]
